# datascience-practice2

./: main.py  project1.ipynb  pyproject.toml
data/: amazon_sales_2025_processed.csv
